# bassinet-sui

./: .env  Cargo.toml  README.md
src/: archive.rs  coin_read_api.rs  ed25519.rs  event_listening.rs  events_mq.rs  kv_store.rs  main.rs  rabbitmq_util.rs  sui_api_integration.rs  sui_ed25519.rs  sui_service.rs  template.rs
src/events_mq/: coin_published_producer.rs  nft_launched_consumer.rs  nft_published_producer.rs  service_opened_consumer.rs
src/sui_service/: digital_service.rs  nft_service.rs
src/template/: bassinet_coin.rs  bassinet_nft.rs
templates/: bassinet_coin_move_publish_template  bassinet_coin_move_template  bassinet_coin_template  bassinet_nft_move_publish_template  bassinet_nft_move_template
templates/bassinet_coin/: Move.toml
templates/bassinet_coin/sources/: bassinet_coin.move
templates/bassinet_coin/tests/: bassinet_coin_tests.move
