[package]
name = "bassinet-sui"
version = "0.1.0"
edition = "2024"

[dependencies]
sui-sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk"}
sui-keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys"}
shared-crypto = { git = "https://github.com/mystenlabs/sui", package = "shared-crypto"}
tokio = { version = "1.2", features = ["full"] }
futures = "0.3.31"
ed25519-dalek = {version = "2.1.1", features = ["rand_core"]}
fastcrypto = "0.1.9"
hex = "0.4.3"
rand = "0.8.5"
anyhow = "^1.0.60"
snafu = "0.8"
#sha2 = "0.10.8"
bcs = "0.1.6"
# askama = "0.14.0"
text_placeholder = "0.5.1"
thiserror = "2.0.12"
amqprs = {version="2.1.1", features = ["traces", "tracing"]}
async-trait = "0.1.64"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
#thiserror = "1.0.38"
flate2 = "1.1.1"
tar = "0.4.44"
serde={version="1.0", features=["derive"]}
serde_json = "1.0"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1.3"

[dependencies.uuid]
version = "1.16.0"
features = [
"v4", # Lets you generate random UUIDs
"fast-rng", # Use a faster (but still sufficiently random) RNG
"macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.rocksdb]
version = "0.23.0"
default-features = false
features = ["bindgen-runtime", "snappy", "lz4", "zstd", "zlib", "bzip2"]
# features = ["lz4"]
